feat: core api + dashboard
